--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="conteudo1">
 
       <div class="subconteudo">
-        <span></span>
+        <span class="detalhe"></span>
         <h1>Bicicletas Feitas a Mão</h1>
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class="botao" href="#">VER MAIS</a>
@@ -35,23 +35,23 @@
 
     <div class="conteudo2">
 
-      <div class="Vantagens">
+      <div class="titulo">
         <h2>Vantagens Bikcraft</h2>
       </div>
 
-      <div class="especificaçoes">
+      <div class="Vantagens">
 
-        <div class="grid">
+        <div class="vantagens-item">
           <img src="img/eletrica.svg" alt="">
 
-          <div class="descriçao1">
+          <div class="descricao1">
             <h3>Motor Elétrico</h3>
             <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
           </div>
 
         </div>
 
-        <div class="grid2">
+        <div class="vantagens-item2">
           <img src="img/velocidade.svg" alt="">
 
           <div class="descriçao2">
@@ -61,7 +61,7 @@
 
         </div>
 
-        <div class="grid3">
+        <div class="vantagens-item3">
           <img src="img/rastreador.svg" alt="">
 
           <div class="descriçao3">
