--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <h2>Vantagens Bikcraft</h2>
       </div>
 
-      <div class="Vantagens">
+      <div class="vantagens">
 
         <div class="vantagens-item">
           <img src="img/eletrica.svg" alt="">
 
-          <div class="descricao1">
+          <div class="vantagens-item1">
             <h3>Motor Elétrico</h3>
             <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
           </div>
