--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
 </head>
 
 <body>
-  <div class="logo">
-    <img src="img/bikcraft.svg" alt="">
-  </div>
 
-  <nav>
-    <a href="#">SOBRE</a>
-    <a href="#">PRODUTOS</a>
-    <a href="#">LOJAS</a>
-    <a href="#">CONTATO</a>
-  </nav>
+  <header>
+
+    <img src="img/bikcraft.svg" alt="">
+
+    <nav>
+      <ul>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Produtos</a></li>
+        <li><a href="#">Lojas</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+
+
+  </header>
   <main>
 
     <div class="conteudo1">
