--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <img src="img/bikcraft.svg" alt="">
 
-    <nav>
+    <nav aria-label="primaria">
       <ul>
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Produtos</a></li>
@@ -29,9 +29,7 @@
   <main>
 
     <div class="conteudo1">
-
       <div class="subconteudo">
-        <span class="detalhe"></span>
         <h1>Bicicletas Feitas a Mão</h1>
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class="botao" href="#">VER MAIS</a>
@@ -40,7 +38,6 @@
     </div>
 
     <div class="conteudo2">
-
       <div class="titulo">
         <h2>Vantagens Bikcraft</h2>
       </div>
