--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class="botao" href="#">VER MAIS</a>
       </div>
-      <img src="img/bicicleta.jpg" alt="Bicicleta preta">
+      <img class="img1" src="img/bicicleta.jpg" alt="Bicicleta preta">
     </div>
 
     <div class="conteudo2">
