--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 
   </header>
   <main>
-
     <div class="conteudo1">
       <div class="subconteudo">
         <h1>Bicicletas Feitas a Mão</h1>
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class="botao" href="#">VER MAIS</a>
       </div>
-      <img class="img1" src="img/bicicleta.jpg" alt="Bicicleta preta">
+      <div class="intrducao-cover">
+        <img src="img/bicicleta.jpg" alt="Bicicleta preta">
+      </div>
     </div>
 
     <div class="conteudo2">
@@ -71,19 +72,13 @@
             <h3>Rastreador</h3>
             <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
           </div>
-
         </div>
-
       </div>
-
     </div>
-
   </main>
-
   <footer>
     <p>Bikcraft. Alguns Direitos Reservados</p>
   </footer>
-
 </body>
 
 </html>
